--- a/ESMF/GOCART2G_GridComp/SU2G_GridComp/AMIP/SU2G_GridComp_ExtData.yaml
+++ b/ESMF/GOCART2G_GridComp/SU2G_GridComp/AMIP/SU2G_GridComp_ExtData.yaml
@@ -5,14 +5,19 @@ Collections:
     template: ExtData/chemistry/MERRA2GMI/v0.0.0/L72/MERRA2_GMI.tavg24_3d_dac_Nv.x576_y361_t12.%y4.nc4
   SU2G_SO2-em-AIR-anthro_input4MIPs_emissions_CMIP_CEDS-2021-04-21_gn__aviation.x576_y361_z72_t12.%y4.nc4:
     template: ExtData/chemistry/CEDS/v2021-04-21/L72/SO2-em-AIR-anthro_input4MIPs_emissions_CMIP_CEDS-2021-04-21_gn__aviation.x576_y361_z72_t12.%y4.nc4
+    valid_range: "1979-01-15T12:00/2019-12-15T12:00"
   SU2G_SO2-em-anthro_CMIP_CEDS_gn_energy.x2304_y1441_t12.%y4.nc4:
     template: ExtData/chemistry/CEDS/v2021-04-21/sfc/SO2-em-anthro_CMIP_CEDS_gn_energy.x2304_y1441_t12.%y4.nc4
+    valid_range: "1979-01-15T12:00/2019-12-15T12:00"
   SU2G_SO2-em-anthro_CMIP_CEDS_gn_nonenergy.x2304_y1441_t12.%y4.nc4:
     template: ExtData/chemistry/CEDS/v2021-04-21/sfc/SO2-em-anthro_CMIP_CEDS_gn_nonenergy.x2304_y1441_t12.%y4.nc4
+    valid_range: "1979-01-15T12:00/2019-12-15T12:00"
   SU2G_SO2-em-anthro_CMIP_CEDS_gn_shipping.x2304_y1441_t12.%y4.nc4:
     template: ExtData/chemistry/CEDS/v2021-04-21/sfc/SO2-em-anthro_CMIP_CEDS_gn_shipping.x2304_y1441_t12.%y4.nc4
+    valid_range: "1979-01-15T12:00/2019-12-15T12:00"
   SU2G_SO4-em-anthro_CMIP_CEDS_gn_shipping.x2304_y1441_t12.%y4.nc4:
     template: ExtData/chemistry/CEDS/v2021-04-21/sfc/SO4-em-anthro_CMIP_CEDS_gn_shipping.x2304_y1441_t12.%y4.nc4
+    valid_range: "1979-01-15T12:00/2019-12-15T12:00"
   SU2G_merra2.aer_Nv.2003-2015.2008%m2clm.nc4:
     template: ExtData/chemistry/MERRA2/v0.0.0/L72/merra2.aer_Nv.2003-2015.2008%m2clm.nc4
     valid_range: "2008-01-01T12:00:00/2008-12-15T12:00:00"
@@ -35,23 +40,23 @@ Samplings:
     update_frequency: PT24H
     update_offset: PT12H
     update_reference_time: '0'
+  SU2G_sample_3:
+    extrapolation: clim
+    update_frequency: PT24H
+    update_offset: PT12H
+    update_reference_time: '0'
+    source_time: "2019-01-15T12:00/2019-12-15T00:00:00"
 
 Exports:
   SU_AIRCRAFT:
-    collection: SU2G_SO2-em-AIR-anthro_input4MIPs_emissions_CMIP_CEDS-2021-04-21_gn__aviation.x576_y361_z72_t12.%y4.nc4
-    regrid: CONSERVE
-    sample: SU2G_sample_1
-    variable: so2_aviation
+    - {starting: "1979-01-15T12:00", collection: SU2G_SO2-em-AIR-anthro_input4MIPs_emissions_CMIP_CEDS-2021-04-21_gn__aviation.x576_y361_z72_t12.%y4.nc4, sample: SU2G_sample_1, regrid: CONSERVE, variable: so2_aviation}
+    - {starting: "2019-12-15T12:00", collection: SU2G_SO2-em-AIR-anthro_input4MIPs_emissions_CMIP_CEDS-2021-04-21_gn__aviation.x576_y361_z72_t12.%y4.nc4, regrid: CONSERVE, sample: SU2G_sample_3, variable: so2_aviation}
   SU_ANTHROL1:
-    collection: SU2G_SO2-em-anthro_CMIP_CEDS_gn_nonenergy.x2304_y1441_t12.%y4.nc4
-    regrid: CONSERVE
-    sample: SU2G_sample_1
-    variable: so2_nonenergy
+    - {starting: "1979-01-15T12:00", collection: SU2G_SO2-em-anthro_CMIP_CEDS_gn_nonenergy.x2304_y1441_t12.%y4.nc4, sample: SU2G_sample_1, regrid: CONSERVE, variable: so2_nonenergy}
+    - {starting: "2019-12-15T12:00", collection: SU2G_SO2-em-anthro_CMIP_CEDS_gn_nonenergy.x2304_y1441_t12.%y4.nc4, regrid: CONSERVE, sample: SU2G_sample_3, variable: so2_nonenergy}
   SU_ANTHROL2:
-    collection: SU2G_SO2-em-anthro_CMIP_CEDS_gn_energy.x2304_y1441_t12.%y4.nc4
-    regrid: CONSERVE
-    sample: SU2G_sample_1
-    variable: so2_energy
+    - {starting: "1979-01-15T12:00", collection: SU2G_SO2-em-anthro_CMIP_CEDS_gn_energy.x2304_y1441_t12.%y4.nc4, sample: SU2G_sample_1, regrid: CONSERVE, variable: so2_energy}
+    - {starting: "2019-12-15T12:00", collection: SU2G_SO2-em-anthro_CMIP_CEDS_gn_energy.x2304_y1441_t12.%y4.nc4, regrid: CONSERVE, sample: SU2G_sample_3, variable: so2_energy}
   SU_AVIATION_CDS:
     collection: /dev/null
     regrid: CONSERVE
@@ -91,15 +96,11 @@ Exports:
     sample: SU2G_sample_1
     variable: oh
   SU_SHIPSO2:
-    collection: SU2G_SO2-em-anthro_CMIP_CEDS_gn_shipping.x2304_y1441_t12.%y4.nc4
-    regrid: CONSERVE
-    sample: SU2G_sample_1
-    variable: so2_shipping
+    - {starting: "1979-01-15T12:00", collection: SU2G_SO2-em-anthro_CMIP_CEDS_gn_shipping.x2304_y1441_t12.%y4.nc4, sample: SU2G_sample_1, regrid: CONSERVE, variable: so2_shipping}
+    - {starting: "2019-12-15T12:00", collection: SU2G_SO2-em-anthro_CMIP_CEDS_gn_shipping.x2304_y1441_t12.%y4.nc4, regrid: CONSERVE, sample: SU2G_sample_3, variable: so2_shipping}
   SU_SHIPSO4:
-    collection: SU2G_SO4-em-anthro_CMIP_CEDS_gn_shipping.x2304_y1441_t12.%y4.nc4
-    regrid: CONSERVE
-    sample: SU2G_sample_1
-    variable: so4_shipping
+    - {starting: "1979-01-15T12:00", collection: SU2G_SO4-em-anthro_CMIP_CEDS_gn_shipping.x2304_y1441_t12.%y4.nc4, sample: SU2G_sample_1, regrid: CONSERVE, variable: so4_shipping}
+    - {starting: "2019-12-15T12:00", collection: SU2G_SO4-em-anthro_CMIP_CEDS_gn_shipping.x2304_y1441_t12.%y4.nc4, regrid: CONSERVE, sample: SU2G_sample_3, variable: so4_shipping}
   climSO4:
     collection: SU2G_merra2.aer_Nv.2003-2015.2008%m2clm.nc4
     sample: SU2G_sample_0
