--- a/ESMF/GOCART_GridComp/CH4_GridComp/CMakeLists.txt
+++ b/ESMF/GOCART_GridComp/CH4_GridComp/CMakeLists.txt
@@ -5,7 +5,7 @@ esma_add_library (${this}
   DEPENDENCIES Chem_Shared Chem_Base GMAO_mpeu MAPL_cfio_r4
   )
 target_include_directories (${this} PUBLIC ${INC_NETCDF})
-esma_generate_gocart_code (${this} "-B\;-E\;-F\;-N\;GOCART")
+# esma_generate_gocart_code (${this} "-B\;-E\;-F\;-N\;GOCART")
 
 file (GLOB_RECURSE rc_files CONFIGURE_DEPENDS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.rc)
 foreach ( file ${rc_files} )
