--- a/ESMF/GOCART2G_GridComp/SS2G_GridComp/SS2G_StateSpecs.rc
+++ b/ESMF/GOCART2G_GridComp/SS2G_GridComp/SS2G_StateSpecs.rc
@@ -42,7 +42,7 @@ category: EXPORT
  NAME          | UNITS        | DIMS  | VLOC  | UNGRIDDED                      | LONG NAME
 #----------------------------------------------------------------------------------------
  SSMASS        | kg kg-1      | xyz   | C     |                                | Sea Salt Mass Mixing Ratio
- SSMASS25      | kg kg-1      | xyz   | C     |                                | Sea Salt Mass Mixing Ratio - PM 2.5
+ SSMASS25      | kg kg-1      | xyz   | C     |                                | Sea Salt Mass Mixing Ratio of Particulate Matter < 2.5 microns (PM2.5)
  SSCONC        | kg m-3       | xyz   | C     |                                | Sea Salt Mass Concentration
  SSEXTCOEF     | m-1          | xyz   | C     | size(self%wavelengths_profile) | Sea Salt Extinction Coefficient
  SSEXTCOEFRH20 | m-1          | xyz   | C     | size(self%wavelengths_profile) | Sea Salt Extinction Coefficient - Fixed RH=20%
@@ -59,17 +59,17 @@ category: EXPORT
  SSSV          | kg m-2 s-1   | xy    | N     | self%nbins                     | Sea Salt Convective Scavenging (Bin %d)
  SSSMASS       | kg m-3       | xy    | N     |                                | Sea Salt Surface Mass Concentration
  SSCMASS       | kg m-2       | xy    | N     |                                | Sea Salt Column Mass Density
- SSEXTTAU      | 1            | xy    | N     | size(self%wavelengths_vertint) | Sea Salt Extinction AOT
- SSSTEXTTAU    | 1            | xy    | N     | size(self%wavelengths_vertint) | Sea Salt Extinction AOT Stratosphere
- SSSCATAU      | 1            | xy    | N     | size(self%wavelengths_vertint) | Sea Salt Scattering AOT
- SSSTSCATAU    | 1            | xy    | N     | size(self%wavelengths_vertint) | Sea Salt Scattering AOT Stratosphere
- SSSMASS25     | kg m-3       | xy    | N     |                                | Sea Salt Surface Mass Concentration - PM 2.5
- SSCMASS25     | kg m-2       | xy    | N     |                                | Sea Salt Column Mass Density - PM 2.5
- SSEXTT25      | 1            | xy    | N     | size(self%wavelengths_vertint) | Sea Salt Extinction AOT - PM 2.5
- SSSCAT25      | 1            | xy    | N     | size(self%wavelengths_vertint) | Sea Salt Scattering AOT - PM 2.5
+ SSEXTTAU      | 1            | xy    | N     | size(self%wavelengths_vertint) | Sea Salt Aerosol Optical Depth
+ SSSTEXTTAU    | 1            | xy    | N     | size(self%wavelengths_vertint) | Sea Salt Stratospheric Aerosol Optical Thickness
+ SSSCATAU      | 1            | xy    | N     | size(self%wavelengths_vertint) | Sea Salt Aerosol Optical Depth Due to Scattering
+ SSSTSCATAU    | 1            | xy    | N     | size(self%wavelengths_vertint) | Sea Salt Stratospheric Aerosol Optical Thickness Due to Scattering
+ SSSMASS25     | kg m-3       | xy    | N     |                                | Sea Salt Surface Mass Concentration of Particulate Matter < 2.5 microns (PM2.5)
+ SSCMASS25     | kg m-2       | xy    | N     |                                | Sea Salt Column Mass Density of Particulate Matter < 2.5 microns (PM2.5)
+ SSEXTT25      | 1            | xy    | N     | size(self%wavelengths_vertint) | Sea Salt Aerosol Optical Depth from Particulate Matter < 2.5 microns (PM2.5)
+ SSSCAT25      | 1            | xy    | N     | size(self%wavelengths_vertint) | Sea Salt Aerosol Optical Depth Due to Scattering from Particulate Matter < 2.5 microns (PM2.5)
  SSAERIDX      | 1            | xy    | N     |                                | Sea Salt TOMS UV Aerosol Index
- SSEXTTFM      | 1            | xy    | N     | size(self%wavelengths_vertint) | Sea Salt Extinction AOT [550 nm] - PM 1.0 um
- SSSCATFM      | 1            | xy    | N     | size(self%wavelengths_vertint) | Sea Salt Scattering AOT [550 nm] - PM 1.0 um
+ SSEXTTFM      | 1            | xy    | N     | size(self%wavelengths_vertint) | Sea Salt Aerosol Optical Depth from Particulate Matter < 1 micron (PM1.0)
+ SSSCATFM      | 1            | xy    | N     | size(self%wavelengths_vertint) | Sea Salt Aerosol Optical Depth Due to Scattering from Particulate Matter < 1 micron (PM1.0)
  SSANGSTR      | 1            | xy    | N     |                                | Sea Salt Angstrom parameter [470-870 nm]
  SSFLUXU       | kg m-1 s-1   | xy    | N     |                                | Sea Salt column u-wind mass flux
  SSFLUXV       | kg m-1 s-1   | xy    | N     |                                | Sea Salt column v-wind mass flux
