--- a/ESMF/GOCART_GridComp/CO_GridComp/CO_GridComp_ExtData.yaml
+++ b/ESMF/GOCART_GridComp/CO_GridComp/CO_GridComp_ExtData.yaml
@@ -11,10 +11,10 @@ Collections:
     template: ExtData/PIESA/L72/gmi_oh_ch4_h2o2_no3.x144_y91_z72_t12.2006.nc
   CO_qfed2.emis_co.006.%y4%m2%d2.nc4:
     template: ExtData/chemistry/QFED/v2.5r1-nrt/sfc/0.1/Y%y4/M%m2/qfed2.emis_co.006.%y4%m2%d2.nc4
-    valid_range: "2014-12-01T12:00/2021-11-01T12:00"
+    valid_range: "2014-12-01T12:00/2017-11-01T12:00"
   CO_qfed2.emis_co.061.%y4%m2%d2.nc4:
-    template: ExtData/chemistry/QFED/v2.5r1-nrt/sfc/0.1/Y%y4/M%m2/qfed2.emis_co.061.%y4%m2%d2.nc4
-    valid_range: "2021-11-01T12:00/2025-01-01"
+    template: ExtData/chemistry/QFED/v2.6r1/sfc/0.1/Y%y4/M%m2/qfed2.emis_co.061.%y4%m2%d2.nc4
+    valid_range: "2017-11-01T12:00/2025-01-01"
 
 Samplings:
   CO_sample_0:
@@ -67,7 +67,7 @@ Exports:
     variable: bf
   CO_BIOMASS:
     - {starting: "2014-12-01T12:00", collection: CO_qfed2.emis_co.006.%y4%m2%d2.nc4, linear_transformation: [0.0, 1.11], regrid: CONSERVE, sample: CO_sample_0, variable: biomass}
-    - {starting: "2021-11-01T12:00", collection: CO_qfed2.emis_co.061.%y4%m2%d2.nc4, linear_transformation: [0.0, 1.11], regrid: CONSERVE, sample: CO_sample_0, variable: biomass}
+    - {starting: "2017-11-01T12:00", collection: CO_qfed2.emis_co.061.%y4%m2%d2.nc4, linear_transformation: [0.0, 1.11], regrid: CONSERVE, sample: CO_sample_0, variable: biomass}
   CO_BIOMASSnbas:
     collection: /dev/null
     regrid: CONSERVE
