--- a/ESMF/GOCART2G_GridComp/GOCART2G_StateSpecs.rc
+++ b/ESMF/GOCART2G_GridComp/GOCART2G_StateSpecs.rc
@@ -7,63 +7,63 @@ category: IMPORT
 #----------------------------------------------------------------------------------------
      NAME   | UNITS    | DIMS | VLOC | RESTART | UNGRIDDED | LONG NAME
 #----------------------------------------------------------------------------------------
- DELP          | Pa       | xyz  | C    |         |                                | pressure_thickness
-# RH2          | 1        | xyz  | C    |         |                                | Rel_Hum_after_moist
- AIRDENS       | kg/m^3   | xyz  | C    | OPT     |                                | moist_air_density
- T             | K        | xyz  | C    | OPT     |                                | air_temperature
- PLE           | Pa       | xyz  | E    | OPT     |                                | air_pressure
+ DELP          | Pa       | xyz  | C    |         |                           | pressure_thickness
+# RH2          | 1        | xyz  | C    |         |                           | Rel_Hum_after_moist
+ AIRDENS       | kg/m^3   | xyz  | C    | OPT     |                           | moist_air_density
+ T             | K        | xyz  | C    | OPT     |                           | air_temperature
+ PLE           | Pa       | xyz  | E    | OPT     |                           | air_pressure
 #-imports-from-seasalt-
- SSEXTTAU      | 1        | xy   | N    | SKIP    | size(self%wavelengths_vertint) | Sea Salt Aerosol Optical Depth
- SSSTEXTTAU    | 1        | xy   | N    | SKIP    | size(self%wavelengths_vertint) | Sea Salt Stratospheric Aerosol Optical Thickness
- SSSCATAU      | 1        | xy   | N    | SKIP    | size(self%wavelengths_vertint) | Sea Salt Aerosol Optical Depth Due to Scattering
- SSSTSCATAU    | 1        | xy   | N    | SKIP    | size(self%wavelengths_vertint) | Sea Salt Stratospheric Aerosol Optical Thickness Due to Scattering
- SSEXTCOEF     | m-1      | xyz  | C    | SKIP    | size(self%wavelengths_profile) | Sea Salt Extinction Coefficient
- SSEXTCOEFRH20 | m-1      | xyz  | C    | SKIP    | size(self%wavelengths_profile) | Sea Salt Extinction Coefficient - Fixed RH=20%
- SSEXTCOEFRH80 | m-1      | xyz  | C    | SKIP    | size(self%wavelengths_profile) | Sea Salt Extinction Coefficient - Fixed RH=80%
- SSSCACOEF     | m-1      | xyz  | C    | SKIP    | size(self%wavelengths_profile) | Sea Salt Scattering Coefficient
- SSSCACOEFRH20 | m-1      | xyz  | C    | SKIP    | size(self%wavelengths_profile) | Sea Salt Scattering Coefficient - Fixed RH=20%
- SSSCACOEFRH80 | m-1      | xyz  | C    | SKIP    | size(self%wavelengths_profile) | Sea Salt Scattering Coefficient - Fixed RH=80%
- SSBCKCOEF     | m-1 sr-1 | xyz  | C    | SKIP    | size(self%wavelengths_profile) | Sea Salt Backscatter Coefficient
- SSEXTT25      | 1        | xy   | N    | SKIP    | size(self%wavelengths_vertint) | Sea Salt Aerosol Optical Depth from Particulate Matter < 2.5 microns (PM2.5)
- SSSCAT25      | 1        | xy   | N    | SKIP    | size(self%wavelengths_vertint) | Sea Salt Aerosol Optical Depth Due to Scattering from Particulate Matter < 2.5 microns (PM2.5)
- SSEXTTFM      | 1        | xy   | N    | SKIP    | size(self%wavelengths_vertint) | Sea Salt Aerosol Optical Depth from Particulate Matter < 1 micron (PM1.0)
- SSSCATFM      | 1        | xy   | N    | SKIP    | size(self%wavelengths_vertint) | Sea Salt Aerosol Optical Depth Due to Scattering from Particulate Matter < 1 micron (PM1.0)
- SSANGSTR      | 1        | xy   | N    | SKIP    |                                | Sea Salt Angstrom parameter [470-870 nm]
- SSSMASS       | kg m-3   | xy   | N    | SKIP    |                                | Sea Salt Surface Mass Concentration
- SSSMASS25     | kg m-3   | xy   | N    | SKIP    |                                | Sea Salt Surface Mass Concentration of Particulate Matter < 2.5 microns (PM2.5)
+ SSEXTTAU      | 1        | xy   | N    | SKIP    | ungrd_wavelengths_vertint | Sea Salt Aerosol Optical Depth
+ SSSTEXTTAU    | 1        | xy   | N    | SKIP    | ungrd_wavelengths_vertint | Sea Salt Stratospheric Aerosol Optical Thickness
+ SSSCATAU      | 1        | xy   | N    | SKIP    | ungrd_wavelengths_vertint | Sea Salt Aerosol Optical Depth Due to Scattering
+ SSSTSCATAU    | 1        | xy   | N    | SKIP    | ungrd_wavelengths_vertint | Sea Salt Stratospheric Aerosol Optical Thickness Due to Scattering
+ SSEXTCOEF     | m-1      | xyz  | C    | SKIP    | ungrd_wavelengths_profile | Sea Salt Extinction Coefficient
+ SSEXTCOEFRH20 | m-1      | xyz  | C    | SKIP    | ungrd_wavelengths_profile | Sea Salt Extinction Coefficient - Fixed RH=20%
+ SSEXTCOEFRH80 | m-1      | xyz  | C    | SKIP    | ungrd_wavelengths_profile | Sea Salt Extinction Coefficient - Fixed RH=80%
+ SSSCACOEF     | m-1      | xyz  | C    | SKIP    | ungrd_wavelengths_profile | Sea Salt Scattering Coefficient
+ SSSCACOEFRH20 | m-1      | xyz  | C    | SKIP    | ungrd_wavelengths_profile | Sea Salt Scattering Coefficient - Fixed RH=20%
+ SSSCACOEFRH80 | m-1      | xyz  | C    | SKIP    | ungrd_wavelengths_profile | Sea Salt Scattering Coefficient - Fixed RH=80%
+ SSBCKCOEF     | m-1 sr-1 | xyz  | C    | SKIP    | ungrd_wavelengths_profile | Sea Salt Backscatter Coefficient
+ SSEXTT25      | 1        | xy   | N    | SKIP    | ungrd_wavelengths_vertint | Sea Salt Aerosol Optical Depth from Particulate Matter < 2.5 microns (PM2.5)
+ SSSCAT25      | 1        | xy   | N    | SKIP    | ungrd_wavelengths_vertint | Sea Salt Aerosol Optical Depth Due to Scattering from Particulate Matter < 2.5 microns (PM2.5)
+ SSEXTTFM      | 1        | xy   | N    | SKIP    | ungrd_wavelengths_vertint | Sea Salt Aerosol Optical Depth from Particulate Matter < 1 micron (PM1.0)
+ SSSCATFM      | 1        | xy   | N    | SKIP    | ungrd_wavelengths_vertint | Sea Salt Aerosol Optical Depth Due to Scattering from Particulate Matter < 1 micron (PM1.0)
+ SSANGSTR      | 1        | xy   | N    | SKIP    |                           | Sea Salt Angstrom parameter [470-870 nm]
+ SSSMASS       | kg m-3   | xy   | N    | SKIP    |                           | Sea Salt Surface Mass Concentration
+ SSSMASS25     | kg m-3   | xy   | N    | SKIP    |                           | Sea Salt Surface Mass Concentration of Particulate Matter < 2.5 microns (PM2.5)
 
 category: EXPORT
 #----------------------------------------------------------------------------------------
 #  VARIABLE               | DIMENSIONS  |          Additional Metadata
 #----------------------------------------------------------------------------------------
- NAME           | UNITS      | DIMS | VLOC | UNGRIDDED                      | LONG NAME
+ NAME           | UNITS      | DIMS | VLOC | UNGRIDDED                 | LONG NAME
 #----------------------------------------------------------------------------------------
- PSO4TOT        | kg m-2 s-1 | xyz  | C    |                                | Total Sulfate Produced in GOCART
+ PSO4TOT        | kg m-2 s-1 | xyz  | C    |                           | Total Sulfate Produced in GOCART
 #........................................................................................
- TOTEXTTAU      | 1          | xy   | N    | size(self%wavelengths_vertint) | Total Aerosol Optical Depth at 550 nm
- TOTSTEXTTAU    | 1          | xy   | N    | size(self%wavelengths_vertint) | Total Stratospheric Aerosol Optical Thickness at 550 nm
- TOTSCATAU      | 1          | xy   | N    | size(self%wavelengths_vertint) | Total Aerosol Optical Depth at 550 nm Due to Scattering
- TOTSTSCATAU    | 1          | xy   | N    | size(self%wavelengths_vertint) | Total Stratospheric Aerosol Optical Thickness at 550 nm Due to Scattering
- TOTEXTT25      | 1          | xy   | N    | size(self%wavelengths_vertint) | Total Aerosol Optical Depth at 550 nm from Particluate Matter < 2.5 microns  (PM2.5)
- TOTSCAT25      | 1          | xy   | N    | size(self%wavelengths_vertint) | Total Aerosol Optical Depth at 550 nm Due to Scattering from Particulate Matter < 2.5 microns (PM2.5)
- TOTEXTTFM      | 1          | xy   | N    | size(self%wavelengths_vertint) | Total Aerosol Optical Depth at 550 nm from Particluate Matter < 1 micron  (PM1.0)
- TOTSCATFM      | 1          | xy   | N    | size(self%wavelengths_vertint) | Total Aerosol Optical Depth at 550 nm Due to Scattering from Particulate Matter < 1 micron (PM1.0)
- TOTANGSTR      | 1          | xy   | N    |            | Total Aerosol Angstrom parameter [470-870 nm]
- TOTEXTCOEF     | m-1        | xyz  | C    | size(self%wavelengths_profile) | Total Aerosol Extinction coefficient
- TOTEXTCOEFRH20 | m-1        | xyz  | C    | size(self%wavelengths_profile) | Total Aerosol Extinction coefficient - Fixed RH=20%
- TOTEXTCOEFRH80 | m-1        | xyz  | C    | size(self%wavelengths_profile) | Total Aerosol Extinction coefficient - Fixed RH=80%
- TOTSCACOEF     | m-1        | xyz  | C    | size(self%wavelengths_profile) | Total Aerosol Scattering coefficient
- TOTSCACOEFRH20 | m-1        | xyz  | C    | size(self%wavelengths_profile) | Total Aerosol Scattering coefficient - Fixed RH=20%
- TOTSCACOEFRH80 | m-1        | xyz  | C    | size(self%wavelengths_profile) | Total Aerosol Scattering coefficient - Fixed RH=80%
- TOTBCKCOEF     | m-1 sr-1   | xyz  | C    | size(self%wavelengths_profile) | Total Aerosol Single Scattering Backscatter coefficient
- TOTABCKTOA     | m-1 sr-1   | xyz  | C    |                                | Total Attenuated Backscatter Coefficient from TOA [532nm]
- TOTABCKSFC     | m-1 sr-1   | xyz  | C    |                                | Total Attenuated Backscatter Coefficient from surface [532nm]
- PM             | kg m-3     | xy   | N    |            | Total Reconstructed Dry Particulate Matter
- PM_RH35        | kg m-3     | xy   | N    |            | Total Reconstructed Particulate Matter at 35% Relative Humidity
- PM_RH50        | kg m-3     | xy   | N    |            | Total Reconstructed Particulate Matter at 50% Relative Humidity
- PM25           | kg m-3     | xy   | N    |            | Total Reconstructed Dry Particulate Matter < 2.5 microns (PM2.5)
- PM25_RH35      | kg m-3     | xy   | N    |            | Total Reconstructed Particulate Matter < 2.5 microns (PM2.5) at 35% Relative Humidity
- PM25_RH50      | kg m-3     | xy   | N    |            | Total Reconstructed Particulate Matter < 2.5 microns (PM2.5) at 50% Relative Humidity
+ TOTEXTTAU      | 1          | xy   | N    | ungrd_wavelengths_vertint | Total Aerosol Optical Depth at 550 nm
+ TOTSTEXTTAU    | 1          | xy   | N    | ungrd_wavelengths_vertint | Total Stratospheric Aerosol Optical Thickness at 550 nm
+ TOTSCATAU      | 1          | xy   | N    | ungrd_wavelengths_vertint | Total Aerosol Optical Depth at 550 nm Due to Scattering
+ TOTSTSCATAU    | 1          | xy   | N    | ungrd_wavelengths_vertint | Total Stratospheric Aerosol Optical Thickness at 550 nm Due to Scattering
+ TOTEXTT25      | 1          | xy   | N    | ungrd_wavelengths_vertint | Total Aerosol Optical Depth at 550 nm from Particluate Matter < 2.5 microns  (PM2.5)
+ TOTSCAT25      | 1          | xy   | N    | ungrd_wavelengths_vertint | Total Aerosol Optical Depth at 550 nm Due to Scattering from Particulate Matter < 2.5 microns (PM2.5)
+ TOTEXTTFM      | 1          | xy   | N    | ungrd_wavelengths_vertint | Total Aerosol Optical Depth at 550 nm from Particluate Matter < 1 micron  (PM1.0)
+ TOTSCATFM      | 1          | xy   | N    | ungrd_wavelengths_vertint | Total Aerosol Optical Depth at 550 nm Due to Scattering from Particulate Matter < 1 micron (PM1.0)
+ TOTANGSTR      | 1          | xy   | N    |                                | Total Aerosol Angstrom parameter [470-870 nm]
+ TOTEXTCOEF     | m-1        | xyz  | C    | ungrd_wavelengths_profile | Total Aerosol Extinction coefficient
+ TOTEXTCOEFRH20 | m-1        | xyz  | C    | ungrd_wavelengths_profile | Total Aerosol Extinction coefficient - Fixed RH=20%
+ TOTEXTCOEFRH80 | m-1        | xyz  | C    | ungrd_wavelengths_profile | Total Aerosol Extinction coefficient - Fixed RH=80%
+ TOTSCACOEF     | m-1        | xyz  | C    | ungrd_wavelengths_profile | Total Aerosol Scattering coefficient
+ TOTSCACOEFRH20 | m-1        | xyz  | C    | ungrd_wavelengths_profile | Total Aerosol Scattering coefficient - Fixed RH=20%
+ TOTSCACOEFRH80 | m-1        | xyz  | C    | ungrd_wavelengths_profile | Total Aerosol Scattering coefficient - Fixed RH=80%
+ TOTBCKCOEF     | m-1 sr-1   | xyz  | C    | ungrd_wavelengths_profile | Total Aerosol Single Scattering Backscatter coefficient
+ TOTABCKTOA     | m-1 sr-1   | xyz  | C    |                           | Total Attenuated Backscatter Coefficient from TOA [532nm]
+ TOTABCKSFC     | m-1 sr-1   | xyz  | C    |                           | Total Attenuated Backscatter Coefficient from surface [532nm]
+ PM             | kg m-3     | xy   | N    |                           | Total Reconstructed Dry Particulate Matter
+ PM_RH35        | kg m-3     | xy   | N    |                           | Total Reconstructed Particulate Matter at 35% Relative Humidity
+ PM_RH50        | kg m-3     | xy   | N    |                           | Total Reconstructed Particulate Matter at 50% Relative Humidity
+ PM25           | kg m-3     | xy   | N    |                           | Total Reconstructed Dry Particulate Matter < 2.5 microns (PM2.5)
+ PM25_RH35      | kg m-3     | xy   | N    |                           | Total Reconstructed Particulate Matter < 2.5 microns (PM2.5) at 35% Relative Humidity
+ PM25_RH50      | kg m-3     | xy   | N    |                           | Total Reconstructed Particulate Matter < 2.5 microns (PM2.5) at 50% Relative Humidity
 
 category: INTERNAL
 #----------------------------------------------------------------------------------------
@@ -101,5 +101,3 @@ category: INTERNAL
 # E            | VLOC   | MAPL_VlocationEdge
 # N            | VLOC   | MAPL_VlocationNone
 #--------------------------------------------
-
-
